Bug tracker at http://code.google.com/p/pyftpdlib/issues/list


History
=======

Version: 0.6.1 - Date: XXXX-XX-XX
---------------------------------

Enhancements:

 * Issue #155: AbstractedFS "root" and "cwd" are no longer read-only properties
   but can be set via setattr().

Bugfixes:

 * Issue #156: data connection must be closed before sending 226/426 reply.
   This was against RFC-959 and was causing problems with older FTP clients.

 * Issue #161: MLSD 'unique' fact can provide the same value for files having a
   similar device/inode but that in fact are different.
   (patch by Andrew Scheller)

 * Issue #162: (FTPS) SSL shutdown() is not invoked for the control connection.

 * Issue #163: FEAT erroneously reports MLSD. (patch by Andrew Scheller)

Major API changes since 0.6.0:

 * AbstractedFS root and cwd properties can now be set via setattr().


Version: 0.6.0 - Date: 2011-01-24
---------------------------------

Enhancements:

 * Issue #68: added full FTPS (FTP over SSL/TLS) support provided by new
   TLS_FTPHandler class defined in pyftpdlib.contrib.handlers module.

 * Issue #86: pyftpdlib now reports all ls and MDTM timestamps as GMT times,
   as recommended in RFC-3659.  A FTPHandler.use_gmt_times attributed has been
   added and can be set to False in case local times are desired instead.

 * Issue #124: pyftpdlib now accepts command line options to configure a stand
   alone anonymous FTP server when running pyftpdlib with python's -m option.

 * Issue #125: logs are now provided in a standardized format parsable by log
   analyzers. FTPHandler class provides two new methods to standardize both
   commands and transfers logging: log_cmd() and log_transfer().

 * Issue #127: added FTPHandler.masquerade_address_map option which allows you
   to define multiple 1 to 1 mappings in case you run a FTP server with
   multiple private IP addresses behind a NAT firewall with multiple public
   IP addresses.
