@@ -12,6 +12,9 @@ Enhancements:
  * Issue #155: AbstractedFS "root" and "cwd" are no longer read-only properties
    but can be set via setattr().
 
+ * Issue #168: added FTPHandler.logerror() method. It can be overridden to
+   provide more information (e.g. username) when logging exception tracebacks.
+
 Bugfixes:
 
  * Issue #156: data connection must be closed before sending 226/426 reply.
